<resources>
    <string name="app_name">ReversiAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pieces">pieces</string>
    <string name="is_playing">is playing</string>
    <string name="no_available_move">No available move for</string>
    <string name="play_again">The other player will play again</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back_to_menu">Go Back to Menu</string>
    <string name="won_the_game">won the game!</string>
    <string name="title_activity_menu">Reversi OpenSource</string>
    <string name="title_activity_opcoes">OpcoesActivity</string>
    <string name="player1_name">Player 1 name</string>
    <string name="player2_name">Player 2 name</string>
    <string name="options">Options</string>
    <string name="on_sound">Sound ON!</string>
    <string name="off_sound">Sound OFF!</string>
    <string name="on_music">Music ON!</string>
    <string name="off_music">Music OFF!</string>
    <string name="background_selector">Select the game background:</string>
    <string name="about">About</string>
    <string name="boardSize">Board size:</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_project">This is an open source project, started by Felipe Ribeiro R. Magalhães, and available under MIT license.\n\n The source code can be found in this git repository:\nhttps://github.com/FelipeRRM/AndroidReversi</string>
</resources>
